--- a/src/main/yaml/basic-env.yml
+++ b/src/main/yaml/basic-env.yml
@@ -29,6 +29,14 @@ pools:
         - type: RunScafiProgram
           parameters: [it.unibo.simulations.Flock, 5.0]
     - program: send
+  - pool: &movement
+      - time-distribution:
+          type: ExponentialTime
+          parameters: [ 1 ]
+        type: Event
+        actions:
+          - type: it.unibo.alchemist.DeltaMovement
+            parameters: [ ]
 
 
 environment:
@@ -39,14 +47,15 @@ positions:
 
 network-model:
   type: ConnectWithinDistance
-  parameters: [30]
+  parameters: [5]
 
 displacements:
   - in:
       type: Circle
-      parameters: [ 20, 0, 0, 50 ]
+      parameters: [ 1000, 0, 0, 50 ]
     programs:
       - *program
+      - *movement
     contents:
     - molecule: dx
       concentration: 0.0
