--- a/src/main/yaml/basic-movement.yml
+++ b/src/main/yaml/basic-movement.yml
@@ -36,7 +36,7 @@ pools:
           parameters: [ 1 ]
         type: Event
         actions:
-          - type: it.unibo.alchemist.DeltaMovement
+          - type: it.unibo.incarnation.alchemist.DeltaMovement
 
 
 environment:
