--- a/src/main/yaml/find-area.yml
+++ b/src/main/yaml/find-area.yml
@@ -41,7 +41,7 @@ pools:
           parameters: [ 1 ]
         type: Event
         actions:
-          - type: it.unibo.alchemist.DeltaMovement
+          - type: it.unibo.incarnation.alchemist.DeltaMovement
 
 
 environment:
