--- a/src/main/yaml/flock.yml
+++ b/src/main/yaml/flock.yml
@@ -35,7 +35,7 @@ pools:
           parameters: [ 1 ]
         type: Event
         actions:
-          - type: it.unibo.alchemist.DeltaMovement
+          - type: it.unibo.incarnation.alchemist.DeltaMovement
 
 
 environment:
